--- a/libs/jade/budgeting-tool.jade
+++ b/libs/jade/budgeting-tool.jade
@@ -75,10 +75,10 @@ block content
                                 option Statutory Maternity Pay
                                 option Carer's Allowance
                     .function
-                        button.btn.btn-secondary(type="button")
+                        button.btn.btn-success(type="button")
                             .fa.fa-plus
 
-            button.btn.btn-primary-cancel.back-button-icon(type="button") Income
+            button.btn.btn-primary-light.left-button-icon(type="button") Income
             button.btn.btn-primary.right-button-icon(type="button") Household
 
         .side-nav-beta
