--- a/libs/jade/budgeting-tool.jade
+++ b/libs/jade/budgeting-tool.jade
@@ -42,7 +42,7 @@ block content
                                     option Monthly
                                     option Yearly
                     .function
-                        button.btn.btn-warning(type="button")
+                        button.btn.btn-primary-cancel(type="button")
                             .fa.fa-trash
 
             fieldset
@@ -57,7 +57,7 @@ block content
                                     option Monthly
                                     option Yearly
                     .function
-                        button.btn.btn-warning(type="button")
+                        button.btn.btn-primary-cancel(type="button")
                             .fa.fa-trash
 
             fieldset.well
