--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -133,8 +133,10 @@
 
 .well {
     .callout(
-        @gray-8
+        @gray-8,
+        @callout-border: @gray-6
     );
+    .callout--border;
     border-radius: @form-border-radius;
 }
 
