--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -134,7 +134,10 @@
 .well {
     .callout(
         @gray-8
+        @gray-8,
+        @callout-border: @gray-6
     );
+    .callout--border;
     border-radius: @form-border-radius;
 }
 
