--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -440,6 +440,8 @@ div.tooltip:before {
                 color: @white;
             }
         }
+    .-visited {
+        font-weight: @font-weight-bolder;
     }
 }
 .group {
