Hide Section Notice on mobile

--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -32,6 +32,9 @@
             color: @white;
         }
     }
+    @media( max-width: @screen-xs-max ) {
+        display: none;
+    }
 }
 
 @media (max-width: @max-page-width-before-the-share-bar-ruins-it-all) and (min-width: @screen-sm-min) {
