--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -415,22 +415,9 @@ div.tooltip:before {
     }
 }
 
-.tools {
-    .-visited {
-        font-weight: @font-weight-bolder;
-    }
+.remove {
+    float: right;
 }
-.group {
-    display: table;
-    .field {
-        display: table-cell;
-        width: 100%;
-        .spacing(padding-right,1);
-    }
-    .function {
-        display: table-cell;
-        button {
-            margin-right: 0;
-        }
-    }
+.-visited {
+    font-weight: @font-weight-bolder;
 }
